--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,4 @@ services:
       - 3000:3000
     volumes:
       - .:/opt/app
-    command: ["rails", "s", "-b", "0.0.0.0", "-p", "80"]
-    environment:
-      RAILS_ENV: development
-      PORT: 3000
-      DOMAIN: localhost
-      SECRET_KEY_BASE: abc1234567
+    command: ["rails", "s", "-b", "0.0.0.0"]
